fixed align functions to run after font has been loaded

--- a/views/container/style.styl
+++ b/views/container/style.styl
@@ -117,9 +117,9 @@ body
 		.container
 			.text
 				h3
-					margin-bottom 3px
+					margin-top -3px
 				p
-					font-size 0.8em
+					font-size 0.85em
 					line-height 1.2em
 					padding-left 1.25em
 			img
@@ -204,6 +204,7 @@ body
 			letter-spacing 1px
 			text-shadow 0px 1px 1px white
 			text-transform uppercase
+			margin-bottom -2px
 
 	.most-popular ol li
 		list-style decimal outside
